# picnic-ai-agent

./: .env.example  LICENSE  Makefile  README.md  add_recipe  add_recipe_2  ai_helper_functions.py  audio_streaming_tut.py  get_all_ingreds  picnic_agent.py  picnic_agent_audio.py  picnic_agent_audio_hack.py  picnic_tools.py  pyproject.toml
python_picnic_api/: README.rst
python_picnic_api/integration_tests/: test_client.py  test_helper.py  test_session.py
python_picnic_api/python_picnic_api/: client.py  helper.py  session.py
python_picnic_api/tests/: test_client.py  test_session.py
tools/: picnic_tools.py  tool_descriptions.py
