[project]
name = "picnic-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.156.0",
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.3",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.1",
]
