[project]
name = "picnic-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.156.0",
    "google-cloud-texttospeech>=2.23.0",
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.3",
    "instructor>=1.7.2",
    "numpy>=2.2.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.1",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.ruff]
src = ["."]
exclude = ["venv"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disable_error_code = ["override", "attr-defined", "import", "empty-body"]
exclude = ["venv/", "test_.\\.py$"]